--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python setup.py install
+        pip install flake8 pytest requests
     - name: Lint with flake8
       run: |
         pip install flake8
@@ -28,3 +28,11 @@ jobs:
       run: |
         pip install pytest
         pytest
+    - name: Build package
+        run: |
+          python setup.py sdist bdist_wheel
+    - name: Archive artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: scdata-pkg
+          path: dist
