--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -1,6 +1,14 @@
+# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+
 name: Python application
 
 on: [push]
+#on:
+#  push:
+#    branches: [ master, github-actions ]
+#  pull_request:
+#    branches: [ master, github-actions ]
 
 jobs:
   build:
@@ -8,9 +16,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v2
       with:
         python-version: 3.8
     - name: Install dependencies
@@ -19,20 +27,18 @@ jobs:
         pip install flake8 pytest requests
     - name: Lint with flake8
       run: |
-        pip install flake8
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pip install pytest
         pytest
     - name: Build package
-        run: |
-          python setup.py sdist bdist_wheel
+      run: |
+        python setup.py sdist bdist_wheel
     - name: Archive artifacts
-        uses: actions/upload-artifact@v1
-        with:
-          name: scdata-pkg
-          path: dist
+      uses: actions/upload-artifact@v1
+      with:
+        name: genesisclient-pkg
+        path: dist
